--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #14a0ca;
+    --clr-accent: #23daac;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -274,6 +274,7 @@ header {
 .portfolio__item {
     background: var(--clr-accent);
     overflow: hidden;
+    font-family: 'Source Code Pro', monospace;
 }
 
 .portfolio__img {
@@ -297,7 +298,7 @@ header {
 
 .footer {
     background: #111;
-    color: var(--clr-accent);
+    color: var(--clr-light);
     text-align: center;
     padding: 2.5em 0;
 }
