--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,82 +88,14 @@ header {
     padding: 1em;
 }
 
+.nav {
+    font-family:'Source Code Pro', monospace; 
+    display: none;   
+}
+
 .logo {
     max-width: 100px;
 }
-
-.nav {
-    position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-
-    transform: translatex(100%);
-    transition: transform 250ms cubic-bezier (.5, 0, .5, 1);
-}
-
-.nav__list {
-    list-style: none;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
-.nav__link {
-    color: inherit;
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-h3);
-    text-decoration: none;
-}
-
-.nav__link:hover {
-    color: var(--clr-accent);
-}
-
-.nav-toggle {
-    padding: 0.25em;
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    z-index: 1000;
-}
-
-.hamburger {
-    display: block;
-    position: relative;
-}
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-    background: var(--clr-dark);
-    width: 2em;
-    height: 3px;
-    border-radius: 1em;
-    transition: transform 250ms ease-in-out;
-}
-
-.hamburger::before,
-.hamburger::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-}
-
-.hamburger::before {top: 6px}
-.hamburger::after {bottom: 6px}
-
 
 /* Intro Section CSS */
 
@@ -275,6 +207,8 @@ header {
     background: var(--clr-accent);
     overflow: hidden;
     font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    color: inherit;
 }
 
 .portfolio__img {
