--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #23daac;
+    --clr-accent: #109aeb;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
